<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:gravity="center"    
    android:orientation="vertical" >
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margineform"
        android:layout_marginRight="@dimen/margineform"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/mn_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/name"
                android:textColor="@color/white" >

                <requestFocus />
            </EditText>

        </LinearLayout>
        
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/marginebetween" >

            <EditText
                android:id="@+id/mn_lname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/lastname"
                android:textColor="@color/white" >
        
            </EditText>

        </LinearLayout>
        
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/marginebetween" >

            <EditText
                android:id="@+id/mn_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/username"
                android:textColor="@color/white" >
        
            </EditText>

        </LinearLayout>
        
                                <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/mn_pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginebetween"
                android:layout_weight="1"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/white" >
        
            </EditText>

        </LinearLayout>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/mn_cell"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginebetween"
                android:layout_weight="1"
                android:hint="@string/cellphone"
                android:inputType="phone"
                android:textColor="@color/white" >
        
            </EditText>

        </LinearLayout>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/mn_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginebetween"
                android:layout_weight="1"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColor="@color/white" >
        
            </EditText>

        </LinearLayout>

        <Button
            android:id="@+id/btedit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginebetween"
            android:background="@drawable/efecto_boton"
            android:text="@string/edit" />
        
        <Button
            android:id="@+id/btdelete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginebetween"
            android:background="@drawable/efecto_boton"
            android:text="@string/delete" />
      
    </LinearLayout>
    
    

</LinearLayout>
